# teaberry

./: .gitignore  .travis.yml  LICENSE  Lang3.lhs  Makefile  README  error_messages_sample  import_provides_phase1_plan  known-bugs  lang.cabal  parserize.sh  teaberry.cabal  todo
built-in-modules/: built-ins.tea  either.tea  my-test.tea  option.tea
built-in-modules-snapshot2/: built-ins.tea
built-in-modules-snapshot3/: built-ins.tea  lists.tea
built-in-modules-snapshot4/: built-ins.tea  lists.tea
examples/: basictests.tea  x.tea
examples/tests/fulltests/: agdt.tea  ahoy.tea  arithmetic.tea  basics.tea  binding.tea  blocks.tea  boolean.tea  built-in-functions.tea  built-in-module.tea  catch.tea  check.tea  check_block_closures.tea  check_closure.tea  combine-provides.tea  comparisons.tea  construct.tea  curried.tea  either.tea  empty.tea  empty_check.tea  fake-module.tea  functions.tea  identifiers.tea  if_ask.tea  import_desugar_example.tea  let.tea  lists-basics.tea  lists.tea  local-module.tea  my-module-provide-all.tea  my-module-provide-x.tea  my-module-two-provides.tea  my-module.tea  nested_comment.tea  option.tea  prelude-import-from.tea  prelude-include-module.tea  prelude-provide-all.tea  prelude-provide-x.tea  random.tea  (+12 more)
examples/tests/testing_tests/: nested.tea  one_pass_one_fail.tea  raises-fails.tea  test_is_fail.tea  test_is_pass.tea  two_tests_fail.tea  two_tests_pass.tea
src/: Desugar.lhs  DesugarTests.lhs  Engine.lhs  Interpreter.lhs  InterpreterSyntax.lhs  InterpreterTests.lhs  Parse.lhs  ParseTests.lhs  Parserize.lhs  Pretty.lhs  PrettyInterpreter.lhs  RunTests.lhs  Syntax.lhs  Teaberry.lhs  TeaberryTests.lhs
src/exe/: Parserize.lhs  Teaberry.lhs  Teaberry3.lhs  TeaberryDev.lhs  TeaberryOld.lhs
src/langs/: Anomaly1.lhs  Anomaly2.lhs  Cases1.lhs  CasesPlusVar.lhs  Construct.lhs  Curried.lhs  DataDecl1.lhs  DesugarListBetter.lhs  DumpDesugared.lhs  Expr1Catch.lhs  Expr1FFI.lhs  Expr1If.lhs  Expr1IfAndOr.lhs  Expr1Letrec.lhs  Expr1Letrecstar.lhs  Expr1NWayIf.lhs  Expr1TupleHack.lhs  FixHandleState.lhs  FixWhere.lhs  Front.lhs  Import1.lhs  Import2.lhs  Import2IO.lhs  Import3.lhs  Import4.lhs  Import4Repl.lhs  Langs.lhs  Lists1.lhs  Lists2.lhs  OldPretty.lhs  OldSyntax.lhs  OneModuleAtATime.lhs  OpaqueFFIValues.lhs  Parse1.lhs  Parse1Tests.lhs  Parse2.lhs  Parse2Tests.lhs  ParserExtra.lhs  Parserize.lhs  Pretty1.lhs  (+52 more)
src/lib/: Desugar.lhs  Front.lhs  Interpreter.lhs  InterpreterSyntax.lhs  Parse.lhs  Pretty.lhs  PrettyInterpreter.lhs  Scientific.lhs  Syntax.lhs  TestUtils.lhs
src/oldlib/: OldParse.lhs  OldSyntax.lhs
src/tests/: FrontTests.lhs  InterpreterTests.lhs  ParseTests.lhs  RunTests.lhs  TeaberryDev.lhs
