name:                lang
version:             0.1

synopsis:            simple language

description:

license:             BSD3
--license-file:        LICENSE
author:              Jake Wheat
maintainer:          jakewheatmail@gmail.com
copyright:           Copyright (c) 2018 Jake Wheat
category:            Language
build-type:          Simple
extra-source-files:
-- README,LICENSE
cabal-version:       >=1.10

library
  exposed-modules:     Syntax,Parse
  build-depends:       base >= 4 && < 5,
                       megaparsec >= 7.0 && < 7.1,
                       -- parser-combinators >= 1.0 && < 1.1,
                       scientific >= 0.3 && < 0.4,
                       -- containers >= 0.5 && < 0.7,
                       -- uniplate >= 1.6 && < 1.7,
                       -- pretty >= 1.1 && < 1.2,
                       -- pretty-show >= 1.7 && < 1.10,
                       -- binary >= 0.8 && < 0.11,
                       -- directory >= 1.3 && < 1.4,
                       -- filepath >= 1.4 && < 1.5,
                       -- unix,
                       transformers >= 0.5 && < 0.6,
                       mtl >= 2.2 && < 2.3,

                       tasty >= 1.1 && < 1.3,
                       tasty-hunit >= 0.10 && < 0.11
  hs-source-dirs:      ., src
  default-language:    Haskell2010
  ghc-options:         -Wall -O0
            
  
Test-Suite RunTests
  type:                exitcode-stdio-1.0
  main-is:             RunTests.lhs
  other-modules:       Syntax,Parse,ParseTests
  hs-source-dirs:      .,src
  build-depends:       base >= 4 && < 5,
                       megaparsec >= 7.0 && < 7.1,
                       -- parser-combinators >= 1.0 && < 1.1,
                       scientific >= 0.3 && < 0.4,
                       -- containers >= 0.5 && < 0.7,
                       -- uniplate >= 1.6 && < 1.7,
                       -- pretty >= 1.1 && < 1.2,
                       -- pretty-show >= 1.7 && < 1.10,
                       -- binary >= 0.8 && < 0.11,
                       -- directory >= 1.3 && < 1.4,
                       -- filepath >= 1.4 && < 1.5,
                       -- unix,
                       transformers >= 0.5 && < 0.6,
                       mtl >= 2.2 && < 2.3,

                       tasty >= 1.1 && < 1.3,
                       tasty-hunit >= 0.10 && < 0.11
                       -- --tasty-hedgehog >= 0.2 && < 0.3,
                       -- --hedgehog >= 0.6 && < 0.7


                                 
  other-extensions:
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded  -O0



