cabal-version:       2.2

name:                teaberry
version:             0.1

synopsis:            experiment to implement a dialect of pyret

description:         experiment to implement a dialect of pyret
                     https://github.com/JakeWheat/teaberry/

license:             BSD-3-Clause
license-file:        LICENSE
author:              Jake Wheat
maintainer:          jakewheatmail@gmail.com
copyright:           Copyright 2018-2019 Jake Wheat
category:            Language
build-type:          Simple
extra-source-files:  README,LICENSE
data-files:          built-in-modules/*.tea

source-repository head
  type:                git
  location:            https://github.com/JakeWheat/teaberry.git


common shared-properties
  default-language:    Haskell2010
  build-depends:       base,
                       megaparsec,
                       scientific,
                       pretty,
                       transformers,
                       mtl,
                       safe-exceptions,
                       filepath,
                       uniplate,
  ghc-options:         -Wall
  hs-source-dirs:      src/lib





library
  import:              shared-properties
  build-depends:       tasty,
                       tasty-hunit,
                       raw-strings-qq
  autogen-modules:     Paths_teaberry
  other-modules:       Paths_teaberry
                       -- temp
                       ParserExtra
                       TestUtils
  exposed-modules:     Syntax
                       Parse
                       Pretty
                       Scientific
                       Front
  hs-source-dirs:      src/lib


common langfiles
--library langfiles
  import:              shared-properties
  build-depends:       tasty,
                       tasty-hunit,
                       raw-strings-qq,
                       teaberry
  --autogen-modules:     Paths_teaberry
  exposed-modules:     TestUtils
                       Langs
                       ParserExtra
                       SimpleExpr
                       SimpleExprError
                       SimpleExprReader
                       SimpleExprDesugared
                       SimplestCheck
                       Expr1FFI
                       Expr1If
                       Expr1NWayIf
                       Expr1IfAndOr
                       Expr1TupleHack
                       Statements1
                       Statements1DesugarLetDecl
                       Statements1Seq
                       Statements1WithoutCheck
                       Statements1Check
                       Statements1CheckDesugarRefactor
                       Var1
                       Lists1
                       DataDecl1
                       Cases1
                       CasesPlusVar
                       Ref1
                       Records1
                       Records1Repl
                       Records1Embedded
                       Import1
                       Import2
                       Import3
                       Import2IO
                       Import4
                       Import4Repl
                       DumpDesugared
                       Expr1Letrec
                       Expr1Letrecstar
                       Statements1FunRec1
                       Statements1FunRec2
                       Tuples1
                       Lists2
                       Records2
                       Construct
                       Variants2
                       Expr1Catch
                       OldParse
                       OldPretty
                       OldSyntax
                       DesugarListBetter
                       OpaqueFFIValues
                       Provide1
                       FixWhere
                       RunScriptInterp

  hs-source-dirs:      src/langs
                         
Test-Suite RunTests
  import:              shared-properties,langfiles
  type:                exitcode-stdio-1.0
  main-is:             RunTests.lhs
  other-modules:       ParseTests
  build-depends:       teaberry,
                       tasty,
                       tasty-hunit
  ghc-options:         -threaded
  hs-source-dirs:      src/tests

-- todo: separate out a teaberry-dev exe for the langfiles stuff
executable teaberry
  import:              shared-properties,langfiles
  main-is:             Teaberry.lhs
  build-depends:       haskeline,
                       optparse-applicative,
                       teaberry,
                       tasty,
                       tasty-hunit
  ghc-options:         -threaded
  hs-source-dirs:      src/exe
