cabal-version:       2.2
name:                teaberry
version:             0.1
synopsis:            experiment to implement a dialect of pyret
description:         experiment to implement a dialect of pyret
                     https://github.com/JakeWheat/teaberry/
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jake Wheat
maintainer:          jakewheatmail@gmail.com
copyright:           Copyright 2018-2019 Jake Wheat
category:            Language
build-type:          Simple
extra-source-files:  README,LICENSE
data-files:          built-in-modules/*.tea

source-repository head
  type:                git
  location:            https://github.com/JakeWheat/teaberry.git

common shared-properties
  default-language:    Haskell2010
  build-depends:       base >= 4 && < 6,
                       megaparsec,
                       scientific,
                       pretty,
                       transformers,
                       mtl,
                       safe-exceptions,
                       filepath,
                       uniplate
  ghc-options:         -Wall

library
  import:              shared-properties
  hs-source-dirs:      src/lib
  autogen-modules:     Paths_teaberry
  other-modules:       Paths_teaberry
  exposed-modules:     Syntax
                       Parse
                       Pretty
                       Scientific
                       Front

executable teaberry
  import:              shared-properties
  main-is:             Teaberry.lhs
  hs-source-dirs:      src/exe
  build-depends:       haskeline,
                       optparse-applicative,
                       teaberry
  ghc-options:         -threaded

-- teaberry-dev has command line for a few of the langs
-- and can also run the tasty tests
Test-Suite teaberry-dev
  import:              shared-properties
  type:                exitcode-stdio-1.0
  main-is:             TeaberryDev.lhs
  hs-source-dirs:      src/tests,src/langs
  other-modules:       ParseTests
                       FrontTests
  build-depends:       haskeline,
                       optparse-applicative,
                       teaberry,
                       tasty,
                       tasty-hunit,
                       raw-strings-qq
  ghc-options:         -threaded
  autogen-modules:     Paths_teaberry
  other-modules:       Scientific1
                       Syntax2
                       Parse2
                       Pretty2
                       TestUtils
                       Paths_teaberry
                       Langs
                       ParserExtra
                       SimpleExpr
                       SimpleExprError
                       SimpleExprReader
                       SimpleExprDesugared
                       SimplestCheck
                       Expr1FFI
                       Expr1If
                       Expr1NWayIf
                       Expr1IfAndOr
                       Expr1TupleHack
                       Statements1
                       Statements1DesugarLetDecl
                       Statements1Seq
                       Statements1WithoutCheck
                       Statements1Check
                       Statements1CheckDesugarRefactor
                       Var1
                       Lists1
                       DataDecl1
                       Cases1
                       CasesPlusVar
                       Ref1
                       Records1
                       Records1Repl
                       Records1Embedded
                       Import1
                       Import2
                       Import3
                       Import2IO
                       Import4
                       Import4Repl
                       DumpDesugared
                       Expr1Letrec
                       Expr1Letrecstar
                       Statements1FunRec1
                       Statements1FunRec2
                       Tuples1
                       Lists2
                       Records2
                       Construct
                       Variants2
                       Expr1Catch
                       Parse1
                       Pretty1
                       Syntax1
                       DesugarListBetter
                       OpaqueFFIValues
                       Provide1
                       FixWhere
                       RunScriptInterp
                       Anomaly1
                       Parse1Tests
                       Parse2Tests
                       SimpleBase

